--- a/environment.yml
+++ b/environment.yml
@@ -4,14 +4,12 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.9
-  - pytorch=1.8.1
-  - pygam=0.9
-  - numpy=1.21
-  - pandas=1.2.4
-  - ninja=1.10.2
-  - matplotlib=3.4.2
-  - scikit-learn=0.24.2
-  - scipy=1.6.3
-  - smt=1.3.0
-
+  - python=3.12
+  - numpy
+  - pytorch
+  - notebook
+  - ipykernel
+  - pandas
+  - matplotlib
+  - scikit-learn
+  - scipy
